// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Textarea Actions 1`] = `
Array [
  <p>
    Actions are a bit laggy because of the @storybook/addon-actions. Prod performance is not affected.
  </p>,
  <div
    className="FormField__Wrapper-ydn0fr-0 kMOuNd"
  >
    <label
      className="FormLabel__StyledLabel-skax1c-0 VHIlu"
      hidden={false}
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          Label 
        </div>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
          >
            <textarea
              className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              placeholder="Placeholder"
              rows={3}
            />
          </span>
        </div>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Textarea Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Disabled 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 gucpmn"
            disabled={true}
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Edge cases 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Long values
    </div>
    <div>
      <div
        className="FormField__Wrapper-ydn0fr-0 kMOuNd"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Too long label, goes into ellipsis. Consider smaller label or bigger input 
            </div>
            <div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <textarea
                  className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
                  placeholder="If placeholder goes too long though, it probably should be truncated into ellipsis, right?"
                  rows={3}
                />
              </span>
            </div>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
          >
            This is much neccessary info wow
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Long extraInfo
    </div>
    <div>
      <div
        className="FormField__Wrapper-ydn0fr-0 kMOuNd"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              Small label 
            </div>
            <div>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
              >
                <textarea
                  className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
                  placeholder=""
                  rows={3}
                />
              </span>
            </div>
          </span>
        </label>
        <div>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
          >
            Big extra fat extraInfo that will wrap over many lines. Be careful with this pattern, use it only with small texts!
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Error if empty text 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        My awesome text field 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            aria-invalid={true}
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 hvnvny"
            onChange={[Function]}
            placeholder="This is a placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Extra info below 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 WSuqZ"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Extra info with error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        My awesome text field 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            aria-invalid={true}
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 hvnvny"
            onChange={[Function]}
            placeholder="This is a placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Full width 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 hSHDlv"
  width="100%"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Hidden label 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Required 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Required
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label 
              </div>
              <div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
                >
                  <textarea
                    className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
                    placeholder="Placeholder"
                    required={true}
                    rows={3}
                  />
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With star
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 kMOuNd"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                Label *
              </div>
              <div>
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
                >
                  <textarea
                    className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
                    placeholder="Placeholder"
                    required={true}
                    rows={3}
                  />
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Textarea Specific width 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 hZaNTv"
  width="400px"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea Success 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 kZwvsA"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea With auto focus 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            autoFocus={true}
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea With default value (Uncontrolled behaviour) 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            defaultValue="Some predefined text"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea With tooltip as label addon 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
        <svg
          aria-hidden="false"
          className="IconBase__StyledIconBase-sc-10cbji3-0 cpMDhR FormField__TooltipIcon-ydn0fr-1 ioayVJ"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="Questionmark__StyledCircle-sc-1uxskjf-0 gHSezF"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
          <title>
            Tooltip content
          </title>
        </svg>
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Textarea With value (Controlled behaviour) 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        Label 
      </div>
      <div>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <textarea
            className="NormalizedTextarea__Textarea-i5on9-0 Textarea__StyledTextarea-sc-74ur6l-0 jvIWLm"
            placeholder="Placeholder"
            rows={3}
            value="Some predefined text"
          />
        </span>
      </div>
    </span>
  </label>
</div>
`;
